--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,20 +3,26 @@ project:
   output-dir: docs
 
 website:
-  title: "temp_website"
+  title: "Jasbir's Website"
+  favicon: favicon.png
   navbar:
+    logo: logo.png
     left:
       - href: index.qmd
         text: Home
-      - about.qmd
+      - href: about.qmd
+        text: FYP Project
+      - href: extrapage.qmd
+        text: Learning Notes
+      - href: reflections.qmd
+        text: Reflections
 
 format:
   html:
-    theme:
-      - cosmo
-      - brand
     css: styles.css
     toc: true
+    toc-depth: 3
+    toc-location: left
 
 
 
